# net-update-code

./: .gitignore  bipartite_gcn.py  graph_visualization.py  layers.py  msg.py  no_batch_timing.txt  param.py  proj_time.py  run.sh  setup.sh  test_rl_model.py  train.py  train_good_stuff.py  train_manual.py  train_no_masking.py  train_one_graph.py  train_optimal_cost.py  train_policy_dual_exp.py  train_policy_dual_exp_no_masking.py  train_supervised.py  unit_test.py
analysis/: plan-with-learned-model.ipynb
data/: cost_fat_tree_4_pods.csv
environment/: bipartite_graph.py  cost_fat_tree_4_pods.csv  cost_function.py  costs_fat_tree_4_pods  dataset.py  dcn_environment.py  fat_tree_network.py  flow_link_graph.py  generate_cost_matrix.py  helpers.py  jupiter_graph.py  network_env.py  network_graph.py  rl_interface.py  traffic_distribution.py  visualize.py  waterfilling.py
environment/unit_test/: test_dcn_env.py  test_env.py  test_reward.py  test_traffic_matric.py
gcn/: batch_mgcn.py  batch_mgcn_policy.py  batch_mgcn_policy_no_masking.py  batch_mgcn_value.py  batch_mmsg.py  layers.py  mgcn.py  mgcn_value.py  mmsg.py
gcn/unit_test/: test_batch_graph.py  test_batch_msg.py  test_batch_policy.py  test_gcn.py  (+4 more)
learn/: pg.py  pg_no_masking.py  v.py
rust-dp/: Cargo.toml  README.md
rust-dp/data/: adj_mat_datum.npy  cm.csv  cost_gcn_dataset  nodes_datum.npy  q_graph_fat_tree_4_pods_1.yaml
rust-dp/src/: conf.rs  csvf.rs  dp.rs  main.rs  trace.rs
utils/: gen_traj.py  lr_schedule.py  masking.py  proj_time.py  rewards.py  state_transform.py  traj_store.py  weight_scale.py
(+1 files in other folders)
