[package]
name = "rust-dp"
version = "0.1.0"
authors = ["Hongzi Mao <hongzi@mit.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.1"
structopt = "0.3"
serde = { version = "1", features = ["derive"] }
itertools = "0.8.0"